Loader and environtment files.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+
+<section class="container">
+  <app-menu></app-menu>
+
+  <section class="dynamic-content">
+    <router-outlet></router-outlet>
+  </section>
+</section>
