--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -2,51 +2,65 @@
   <div class="card">
     <h1>List movies</h1>
 
-    <table *ngIf="movies.length">
-      <thead>
-        <tr>
-          <th>ID</th>
+    <div *ngIf="movies.length">
+      <p class="table-subtitle">
+        {{totalResults}} movie(s) displayed across {{totalPages}} page(s)
+      </p>
 
-          <th>
-            Year <br />
+      <table>
+        <thead>
+          <tr>
+            <th>ID</th>
 
-            <input
-              type="number"
-              [(ngModel)]="yearFilter"
-              (input)="filterMoviesByYear()"
-              max="2024"
-              maxlength="4"
-              min="1980"
-              placeholder="Filter by year"
-              aria-label="Filter by year"
-            />
-          </th>
-          
-          <th>Title</th>
-          
-          <th>
-            Winner? <br />
+            <th>
+              Year <br />
 
-            <select [(ngModel)]="winnerFilter" (change)="filterMoviesByWinner()">
-              <option value="yesno">Yes/No</option>
-              <option value="yes">Yes</option>
-              <option value="no">No</option>
-            </select>
-          </th>
-        </tr>
-      </thead>
+              <input
+                type="number"
+                [(ngModel)]="yearFilter"
+                (input)="filterMoviesByYear()"
+                max="2024"
+                maxlength="4"
+                min="1980"
+                placeholder="Filter by year"
+                aria-label="Filter by year"
+              />
+            </th>
+            
+            <th>Title</th>
+            
+            <th>
+              Winner? <br />
 
-      <tbody>
-        <tr *ngFor="let movie of movies">
-          <td>{{movie.id}}</td>
-          <td>{{movie.year}}</td>
-          <td>{{movie.title}}</td>
-          <td>{{movie.winner ? 'Yes' : 'No'}}</td>
-        </tr>
-      </tbody>
-    </table>
+              <select [(ngModel)]="winnerFilter" (change)="filterMoviesByWinner()">
+                <option value="yesno">Yes/No</option>
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+              </select>
+            </th>
+          </tr>
+        </thead>
 
-    <h1 *ngIf="!movies.length">No movies found</h1>
+        <tbody>
+          <tr *ngFor="let movie of movies | paginate: { itemsPerPage: pageSize, currentPage: pageNumber, totalItems: totalResults }">
+            <td>{{movie.id}}</td>
+            <td>{{movie.year}}</td>
+            <td>{{movie.title}}</td>
+            <td>{{movie.winner ? 'Yes' : 'No'}}</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <pagination-controls
+        (pageChange)="changePage($event)"
+        previousLabel=""
+        nextLabel=""
+      ></pagination-controls>
+    </div>
+
+    <div *ngIf="!movies.length" class="no-movies-found">
+      No movies found
+    </div>
   </div>
 </div>
 
