--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<section class="content-container menu">
+<nav class="content-container menu">
   <ul>
     <li
       *ngFor="let menu of mainMenu"
@@ -8,4 +8,4 @@
       {{ menu.title }}
     </li>
   </ul>
-</section>
+</nav>
