--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import './assets/styles/card.scss';
 @import './assets/styles/form.scss';
 @import './assets/styles/table.scss';
+@import './assets/styles/text.scss';
 
 .container {
   display: flex;
