--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -5,3 +5,10 @@
   grid-template-rows: auto auto;
   margin: 20px 20px 20px 10px;
 }
+
+@media screen and (max-width: 1142px) {
+  .dashboard-container {
+    grid-template-columns: 100%;
+    grid-template-rows: auto auto auto;
+  }
+}
