--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -2,6 +2,7 @@ html {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
+  height: 100%;
 }
 
 *, *:before, *:after {
@@ -12,6 +13,10 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
+}
+
+body {
+  min-height: 100%;
 }
 
 ol, ul {
