--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   gap: 12px;
+  min-height: calc(100vh - 39px);
 
   .dynamic-content {
     // flex: 1;
@@ -17,7 +18,8 @@
   }
 
   .content-container {
-    height: calc(100vh - 39px);
+    // height: calc(100vh - 39px);
+    height: 100%;
     padding: 20px 10px;
   }
 }
